Website uses now a single header

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,4 +1,4 @@
-<%- include("templates/admin-header") %> 
+<%- include("templates/header") %> 
 	<div>Users:</div>
     <ul>
         <% let i=0; %>
