--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,4 +1,4 @@
-<%- include("templates/contact-header") %> 
+<%- include("templates/header") %> 
     email address:
     <form action='/submitEmail' method='post'>
         <input name='email' type='text' placeholder='email'>
