--- a/views/members.ejs
+++ b/views/members.ejs
@@ -1,4 +1,4 @@
-<%- include("templates/members-header") %> 
+<%- include("templates/header") %> 
     <h1>Welcome to the Memebers Page, <%= username %>!</h1>
     <div class="container">
     <img src='/Lion-cat-cutest-cat.gif'>
