--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,3 +1,3 @@
-<%- include("templates/about-header") %> 
+<%- include("templates/header") %> 
     <h1 style="color: cornflowerblue;">Website made by Victor Vasconcellos</h1>
 <%- include("templates/footer") %> 
